[gd_scene load_steps=13 format=3 uid="uid://l7uev7wtew2v"]

[ext_resource type="Script" path="res://scripts/t_rex.gd" id="1_b7jy5"]
[ext_resource type="Texture2D" uid="uid://ch2nboetgebhx" path="res://assets/Sprite Pack 8/4 - Percy/Running (32 x 32).png" id="1_eir06"]
[ext_resource type="Texture2D" uid="uid://fqyx2ri34gn4" path="res://assets/Sprite Pack 8/4 - Percy/Shooting_Fireball (32 x 32).png" id="2_p6wx4"]
[ext_resource type="Texture2D" uid="uid://hoabdl5dkd62" path="res://assets/Sprite Pack 8/4 - Percy/Hurt (32 x 32).png" id="3_2euoa"]
[ext_resource type="PackedScene" uid="uid://d1f77nrn7st75" path="res://prefabs/hitbox.tscn" id="5_1fkyh"]

[sub_resource type="Animation" id="Animation_s6wio"]
resource_name = "running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_eir06")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_lsigp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_eir06")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fyr8g"]
resource_name = "shooting"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_p6wx4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5, 5]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_fireball"
}]
}

[sub_resource type="Animation" id="Animation_d0bys"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2euoa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p260b"]
_data = {
"RESET": SubResource("Animation_lsigp"),
"hurt": SubResource("Animation_d0bys"),
"running": SubResource("Animation_s6wio"),
"shooting": SubResource("Animation_fyr8g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_32di0"]
size = Vector2(13, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pjrj"]
size = Vector2(17, 4)

[node name="t_rex" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_b7jy5")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_eir06")
hframes = 6

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p260b")
}
autoplay = "running"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -8)
shape = SubResource("RectangleShape2D_32di0")

[node name="ground_detector" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 2

[node name="player_detector" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(50, 0)

[node name="fireball_spawn" type="Marker2D" parent="."]
position = Vector2(5, -12)

[node name="hitbox" parent="." instance=ExtResource("5_1fkyh")]

[node name="collision" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1.5, -18)
shape = SubResource("RectangleShape2D_8pjrj")
debug_color = Color(0.984314, 0, 0.352941, 0.419608)

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
